--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,44 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
         <activity
-            android:name=".views.MainActivity"
+            android:name=".views.IntroActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Activity detalle -->
-        <activity
-            android:name=".views.QuakeDetailsActivity"
-            android:parentActivityName=".views.MainActivity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.MainActivity" />
-        </activity>
 
-        <activity
-            android:name=".SettingsActivity"
-            android:parentActivityName=".views.MainActivity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.MainActivity" />
-        </activity>
-
-        <!-- Activity Contact -->
-        <activity
-            android:name=".views.WelcomeActivity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
             <tools:validation testUrl="https://figonzal.cl/lastquakechile/" />
             <tools:validation testUrl="https://figonzal.cl/lastquakechile" />
             <tools:validation testUrl="https://lastquakechile-server-dev.herokuapp.com/lastquakechile/" />
@@ -83,6 +55,33 @@
                     android:scheme="https" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+
+        <!-- Activity detalle -->
+        <activity
+            android:name=".views.QuakeDetailsActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:parentActivityName=".views.MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
+
 
         <!--ADS-->
         <meta-data
@@ -125,7 +124,11 @@
         <!-- TODO: Habilitar para produccion -->
         <meta-data
             android:name="firebase_performance_collection_enabled"
-            android:value="true" />
+            android:value="false" />
+        <!-- TODO: Habilitar para produccion -->
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="false" />
     </application>
 
 </manifest>
