--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,9 @@ dependencies {
     testImplementation("junit:junit:4.13.2")
     testImplementation("androidx.test:core-ktx:1.4.0")
     testImplementation("io.insert-koin:koin-test:3.1.5")
+    testImplementation("androidx.arch.core:core-testing:2.1.0")
+    testImplementation("com.google.truth:truth:1.0.1")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
 
     // Instrumented Unit Tests
     androidTestImplementation("junit:junit:4.13.2")
