--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.6.21")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.7.0")
     implementation("androidx.core:core-ktx:1.8.0")
     implementation("androidx.appcompat:appcompat:1.4.2")
 
@@ -107,8 +107,8 @@ dependencies {
     implementation("io.insert-koin:koin-android:3.1.5")
 
     //Google Play
-    implementation("com.google.android.play:core-ktx:1.8.1")
     implementation("com.google.android.gms:play-services-ads:21.0.0")
+    implementation("com.google.android.play:app-update-ktx:2.0.0")
 
     //Google Maps
     // KTX for the Maps SDK for Android
@@ -153,6 +153,7 @@ dependencies {
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.room:room-testing:2.4.2")
     androidTestImplementation("com.google.truth:truth:1.0.1")
+    androidTestImplementation("io.insert-koin:koin-test:3.1.5")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
