--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,6 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 
     //Dependency injection KOIN
-    implementation("io.insert-koin:koin-core:3.1.5")
     implementation("io.insert-koin:koin-android:3.1.5")
 
     //Google Play
@@ -141,6 +140,7 @@ dependencies {
     testImplementation("junit:junit:4.13.2")
     testImplementation("androidx.test:core-ktx:1.4.0")
     testImplementation("io.insert-koin:koin-test:3.1.5")
+    testImplementation("io.insert-koin:koin-test-junit4:3.1.5")
     testImplementation("androidx.arch.core:core-testing:2.1.0")
     testImplementation("com.google.truth:truth:1.0.1")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
@@ -154,6 +154,7 @@ dependencies {
     androidTestImplementation("androidx.room:room-testing:2.4.2")
     androidTestImplementation("com.google.truth:truth:1.0.1")
     androidTestImplementation("io.insert-koin:koin-test:3.1.5")
+    androidTestImplementation("io.insert-koin:koin-test-junit4:3.1.5")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
