--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,12 @@ android {
     }
 }
 
+ext {
+    koin_version = "3.2.0"
+}
+
 dependencies {
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.7.0")
     implementation("androidx.core:core-ktx:1.8.0")
@@ -103,7 +108,8 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 
     //Dependency injection KOIN
-    implementation("io.insert-koin:koin-android:3.1.5")
+    implementation("io.insert-koin:koin-core:$koin_version")
+    implementation("io.insert-koin:koin-android:$koin_version")
 
     //Google Play
     implementation("com.google.android.gms:play-services-ads:21.0.0")
@@ -139,8 +145,8 @@ dependencies {
     //junit
     testImplementation("junit:junit:4.13.2")
     testImplementation("androidx.test:core-ktx:1.4.0")
-    testImplementation("io.insert-koin:koin-test:3.1.5")
-    testImplementation("io.insert-koin:koin-test-junit4:3.1.5")
+    testImplementation("io.insert-koin:koin-test:$koin_version")
+    testImplementation("io.insert-koin:koin-test-junit4:$koin_version")
     testImplementation("androidx.arch.core:core-testing:2.1.0")
     testImplementation("com.google.truth:truth:1.0.1")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
@@ -153,8 +159,8 @@ dependencies {
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.room:room-testing:2.4.2")
     androidTestImplementation("com.google.truth:truth:1.0.1")
-    androidTestImplementation("io.insert-koin:koin-test:3.1.5")
-    androidTestImplementation("io.insert-koin:koin-test-junit4:3.1.5")
+    androidTestImplementation("io.insert-koin:koin-test:$koin_version")
+    androidTestImplementation("io.insert-koin:koin-test-junit4:$koin_version")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
