--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,8 @@ dependencies {
     androidTestImplementation("androidx.arch.core:core-testing:2.1.0")
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.room:room-testing:2.4.2")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:3.4.0")
     androidTestImplementation("com.google.truth:truth:1.0.1")
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
     androidTestImplementation("io.insert-koin:koin-test-junit4:$koin_version")
