--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,10 +159,14 @@ dependencies {
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.room:room-testing:2.4.2")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
-    androidTestImplementation("androidx.test.espresso:espresso-contrib:3.4.0")
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:3.4.0") {
+        exclude module: "protobuf-lite"
+    }
+    androidTestImplementation("androidx.test.espresso:espresso-intents:3.4.0")
     androidTestImplementation("com.google.truth:truth:1.0.1")
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
     androidTestImplementation("io.insert-koin:koin-test-junit4:$koin_version")
+    debugImplementation("androidx.fragment:fragment-testing:1.4.1")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
