--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,12 +152,13 @@ dependencies {
     testImplementation("io.insert-koin:koin-test:$koin_version")
     testImplementation("io.insert-koin:koin-test-junit4:$koin_version")
     testImplementation("androidx.arch.core:core-testing:2.1.0")
-    testImplementation("com.google.truth:truth:1.0.1")
+    testImplementation("androidx.test.ext:truth:1.4.0")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
 
     // Instrumented Unit Tests
     androidTestImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test:runner:1.4.0")
+    androidTestImplementation("androidx.test:rules:1.4.0")
     androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
     androidTestImplementation("androidx.arch.core:core-testing:2.1.0")
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
@@ -167,7 +168,8 @@ dependencies {
         exclude module: "protobuf-lite"
     }
     androidTestImplementation("androidx.test.espresso:espresso-intents:3.4.0")
-    androidTestImplementation("com.google.truth:truth:1.0.1")
+    androidTestImplementation("androidx.test.ext:truth:1.4.0")
+    androidTestImplementation("androidx.test.uiautomator:uiautomator:2.2.0")
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
     androidTestImplementation("io.insert-koin:koin-test-junit4:$koin_version")
     debugImplementation("androidx.fragment:fragment-testing:1.4.1")
