--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,10 @@ dependencies {
     implementation("com.google.firebase:firebase-messaging-ktx")
     implementation("com.google.firebase:firebase-perf-ktx")
 
+    //ViewBinnding delegation
+    //implementation("com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6")
+    //implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.6'
+
     //TIMBER
     implementation("com.jakewharton.timber:timber:5.0.1")
 
@@ -172,7 +176,10 @@ dependencies {
     androidTestImplementation("androidx.test.uiautomator:uiautomator:2.2.0")
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
     androidTestImplementation("io.insert-koin:koin-test-junit4:$koin_version")
+
+    //Debug dependencies
     debugImplementation("androidx.fragment:fragment-testing:1.4.1")
+    debugImplementation("com.squareup.leakcanary:leakcanary-android:2.9.1")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
