--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/ADMOB_MASTER_KEY" />
+            android:value="${ADMOB_MASTER_KEY}" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
