--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@
 android.nonTransitiveRClass=true
 org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
